--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 25.01.2022 07:42:02</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 25.01.2022 08:11:19</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,38 +7,10 @@
 <h5>Úterý, 25. 01. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Hrášková</strong>
+<strong>❣️Dnes 25.1. ZAVŘENO ze zdravotních důvodů.OMLOUVÁME SE</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							35,-
-						</span>
-</p>
-<p>
-<strong>Hovězí guláš s houskovým knedlíkem NEBO rýží</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							135,-
-						</span>
-</p>
-<p>
-<strong>Míchaný salát s marinovanou vepřovou pečení</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
-						</span>
-</p>
-<p>
-<strong>Teplý bufet</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							35,-
-						</span>
-</p>
-<p>
-<strong>Salátový bufet</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							45,-
+							0,-
 						</span>
 </p>
 </div>
